ffmpeg: set sub_text_format to ass (without timing) by default

Fixes Ticket #4783